--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Animals -- Juvenile fiction'
 - !lcsh 'Goats -- Juvenile fiction'
+- GITenberg
 title: Billy Whiskers' Travels
 url: http://www.gutenberg.org/ebooks/43872
